[gd_scene load_steps=31 format=2]

[ext_resource path="res://buildings/Building1.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://buildings/Building2.tscn" type="PackedScene" id=5]
[ext_resource path="res://windturbine/WindTurbine.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HudFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://sky/CloudsRealistic.gdshader" type="Shader" id=8]
[ext_resource path="res://ui/SettingsButton.gd" type="Script" id=9]
[ext_resource path="res://sky/Background.png" type="Texture" id=10]
[ext_resource path="res://sky/CloudsRealistic.tres" type="Material" id=11]
[ext_resource path="res://sfx/BackgroundTrack.mp3" type="AudioStream" id=12]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/GameOver.tscn" type="PackedScene" id=14]
[ext_resource path="res://balloon/Balloon.tscn" type="PackedScene" id=15]
[ext_resource path="res://fonts/Seshat.otf" type="DynamicFontData" id=16]
[ext_resource path="res://sfx/FallDeath.mp3" type="AudioStream" id=17]
[ext_resource path="res://fonts/SmallText.tres" type="DynamicFont" id=18]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=19]
[ext_resource path="res://ui/HudHelpFont.tres" type="DynamicFont" id=20]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 2
octaves = 5
period = 192.0
persistence = 0.475

[sub_resource type="NoiseTexture" id=2]
seamless = true
noise = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 8 )
shader_param/render_sky = false
shader_param/camera_offset = Vector2( 0.53, 0.604 )
shader_param/cloud_offset = Vector2( 0, 0 )
shader_param/sky_color = Color( 0.0196078, 0.419608, 0.537255, 0.207843 )
shader_param/cloud_color = Color( 0.929412, 0.929412, 0.929412, 1 )
shader_param/speed = 0.1
shader_param/noise = SubResource( 2 )

[sub_resource type="Environment" id=4]
background_mode = 4
ambient_light_color = Color( 0.203922, 0.85098, 0.113725, 1 )
tonemap_mode = 2

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 col: hint_color;
void fragment() {
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/col = Color( 0.14902, 0.654902, 0.807843, 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

const float PI = 3.14159;
const float TAU = PI;

mat2 rot(float a) {
	float c = cos(a);
	float s = sin(a);
	return mat2(vec2(c, s), vec2(-s, c));
}

void fragment() {
	vec2 uv = UV - 0.5;
	
	uv *= rot(TIME*0.2);
	
	float a = atan(uv.x, uv.y);
	float l = length(uv);
	
	COLOR = mix(vec4(0), vec4(1,1,0,0.5), smoothstep(0.4, 0.3, l + cos(a*PI*4.0)*0.05));
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 19 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -92.6561, 314.355 )
current = true
script = ExtResource( 4 )

[node name="GameOver" parent="Camera2D" instance=ExtResource( 14 )]
visible = false
z_index = 42

[node name="Sky" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -513.0
margin_top = -303.0
margin_right = 514.0
margin_bottom = 303.0
color = Color( 0.14902, 0.654902, 0.807843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloudsBack" type="Sprite" parent="Camera2D"]
material = ExtResource( 11 )
position = Vector2( 0.420472, 1.26135 )
scale = Vector2( 16.0704, 9.4221 )
texture = ExtResource( 3 )

[node name="CloudsFront" type="Sprite" parent="Camera2D"]
material = SubResource( 3 )
position = Vector2( 0.420471, 1.26135 )
scale = Vector2( 16.0704, 9.4221 )
z_index = 41
texture = ExtResource( 3 )

[node name="Sky2" type="TextureRect" parent="Camera2D"]
visible = false
material = ExtResource( 11 )
margin_left = -512.075
margin_top = -299.406
margin_right = -448.075
margin_bottom = -235.406
rect_scale = Vector2( 16.001, 9.37313 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeButtons" type="Node2D" parent="Camera2D"]
z_index = 4096
z_as_relative = false

[node name="SettingsButton" type="Button" parent="Camera2D/ZeButtons"]
process_priority = -7
margin_left = 319.797
margin_top = -258.959
margin_right = 391.797
margin_bottom = -227.959
custom_fonts/font = ExtResource( 7 )
text = "Settings"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Camera2D/ZeButtons"]
process_priority = -7
margin_left = 407.106
margin_top = -258.959
margin_right = 479.106
margin_bottom = -227.959
custom_fonts/font = ExtResource( 7 )
text = "Quit"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -16.0
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
z_as_relative = false
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 4000, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1460.5, -911.969 )
scale = Vector2( 0.43934, 0.412944 )
z_index = 1
z_as_relative = false
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 9000, 9000 )
__meta__ = {
"_edit_lock_": true
}

[node name="SkySprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource( 6 )
position = Vector2( 1493.55, -918.352 )
scale = Vector2( 62.9466, 58.6754 )
z_index = -2
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2( -94.4388, 285.479 )

[node name="Player" parent="." instance=ExtResource( 13 )]
position = Vector2( -94.977, 300.753 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Player"]
scale = Vector2( 3.34599, 3.34599 )
__meta__ = {
"_edit_lock_": true
}

[node name="Building2" parent="." instance=ExtResource( 5 )]
position = Vector2( -592.113, 271.917 )

[node name="Credits" type="Label" parent="."]
margin_left = -804.0
margin_top = -80.0
margin_right = -608.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 7 )
text = "Made By:
Marshall Couch
Kevin Smith"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsDir" type="Label" parent="."]
margin_left = -567.82
margin_top = 41.474
margin_right = -425.82
margin_bottom = 124.474
custom_fonts/font = SubResource( 7 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 9 )
margin_left = -100.0
margin_top = 41.5
margin_right = 14.0
margin_bottom = 155.5

[node name="Title" type="Label" parent="."]
margin_left = -269.804
margin_top = 73.6289
margin_right = -1.80408
margin_bottom = 156.629
custom_fonts/font = SubResource( 10 )
text = "Sol Runner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="."]
margin_left = -275.772
margin_top = 146.924
margin_right = 13.2281
margin_bottom = 272.924
custom_fonts/font = ExtResource( 20 )
text = "Your job is to clean the city's solar panels."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starting Building" parent="." instance=ExtResource( 1 )]
position = Vector2( -87.1353, 537.739 )

[node name="BalloonTown" type="Node2D" parent="."]

[node name="Balloon9" parent="BalloonTown" instance=ExtResource( 15 )]
position = Vector2( 713.252, -201.003 )
respawn = true

[node name="Balloon10" parent="BalloonTown" instance=ExtResource( 15 )]
position = Vector2( 1128.39, -371.862 )
respawn = true

[node name="Balloon11" parent="BalloonTown" instance=ExtResource( 15 )]
position = Vector2( 410.243, -548.061 )
respawn = true

[node name="Balloon12" parent="BalloonTown" instance=ExtResource( 15 )]
position = Vector2( 1279.22, -307.79 )
respawn = true

[node name="Balloon13" parent="BalloonTown" instance=ExtResource( 15 )]
position = Vector2( 35.1533, -290.437 )
respawn = true

[node name="Building3" parent="BalloonTown" instance=ExtResource( 5 )]
position = Vector2( 805.464, -838.67 )

[node name="Sprite2" type="Sprite" parent="BalloonTown"]
position = Vector2( 803.862, -1013.39 )
texture = ExtResource( 3 )

[node name="EasyMode" type="Node2D" parent="."]

[node name="HelpDoubleJump" type="Label" parent="EasyMode"]
margin_left = 194.559
margin_top = 275.953
margin_right = 406.559
margin_bottom = 401.953
custom_fonts/font = ExtResource( 20 )
text = "Double Jump!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMovment" type="Label" parent="EasyMode"]
margin_left = 174.378
margin_top = 328.929
margin_right = 386.378
margin_bottom = 454.929
custom_fonts/font = ExtResource( 20 )
text = "Move:

Jump:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMovmentControls" type="Label" parent="EasyMode"]
margin_left = 229.143
margin_top = 329.326
margin_right = 441.143
margin_bottom = 455.326
custom_fonts/font = ExtResource( 20 )
text = "A / D or
Left / Right
Space or Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starting Building2" parent="EasyMode" instance=ExtResource( 1 )]
position = Vector2( 494.813, 678.939 )

[node name="HelpHook" type="Label" parent="EasyMode"]
margin_left = 756.46
margin_top = 452.762
margin_right = 968.46
margin_bottom = 578.762
custom_fonts/font = ExtResource( 20 )
text = "Rope swing:
Hold Left Mouse Button
(aim with mouse)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow2" type="Label" parent="EasyMode"]
margin_left = 801.598
margin_top = 551.854
margin_right = 1013.6
margin_bottom = 677.854
custom_fonts/font = ExtResource( 20 )
text = "---->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balloon7" parent="EasyMode" instance=ExtResource( 15 )]
position = Vector2( 497.008, 158.069 )
respawn = true

[node name="Balloon8" parent="EasyMode" instance=ExtResource( 15 )]
position = Vector2( 865.321, 218.613 )
respawn = true

[node name="Building5" parent="EasyMode" instance=ExtResource( 5 )]
position = Vector2( 1239.3, 597.551 )

[node name="DoorEasy" parent="EasyMode" instance=ExtResource( 2 )]
position = Vector2( 1241.04, 407.745 )

[node name="HelpEasy" type="Label" parent="EasyMode"]
margin_left = 1228.16
margin_top = 337.747
margin_right = 1440.16
margin_bottom = 463.747
custom_fonts/font = ExtResource( 20 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpDoorTip" type="Label" parent="EasyMode"]
margin_left = 1217.77
margin_top = 356.609
margin_right = 1429.77
margin_bottom = 482.609
custom_fonts/font = ExtResource( 18 )
text = "Jump to enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintWindTurbine" parent="EasyMode" instance=ExtResource( 6 )]
position = Vector2( 488.411, 466.419 )

[node name="HardMode" type="Node2D" parent="."]

[node name="HardModeDir" type="Label" parent="HardMode"]
margin_left = 1520.48
margin_top = 450.657
margin_right = 1714.48
margin_bottom = 533.657
custom_fonts/font = SubResource( 7 )
text = "Hard Mode -->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpHook2" type="Label" parent="HardMode"]
margin_left = 1527.6
margin_top = 497.158
margin_right = 1733.6
margin_bottom = 615.158
custom_fonts/font = ExtResource( 20 )
text = "Use movement while swinging to increase speed."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balloon" parent="HardMode" instance=ExtResource( 15 )]
position = Vector2( 1596.9, 188.341 )
respawn = true

[node name="Balloon2" parent="HardMode" instance=ExtResource( 15 )]
position = Vector2( 2018.34, 136.079 )
respawn = true

[node name="Balloon3" parent="HardMode" instance=ExtResource( 15 )]
position = Vector2( 2596.15, 129.729 )
respawn = true

[node name="Building3" parent="HardMode" instance=ExtResource( 5 )]
position = Vector2( 3005.69, 434.982 )

[node name="DoorHard" parent="HardMode" instance=ExtResource( 2 )]
position = Vector2( 3004.04, 247.625 )
level_mode = 1

[node name="HelpHard" type="Label" parent="HardMode"]
margin_left = 2989.89
margin_top = 180.755
margin_right = 3201.89
margin_bottom = 306.755
custom_fonts/font = ExtResource( 20 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpDoorTip2" type="Label" parent="HardMode"]
margin_left = 2982.2
margin_top = 199.664
margin_right = 3194.2
margin_bottom = 325.664
custom_fonts/font = ExtResource( 18 )
text = "Jump to enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpideyMode" type="Node2D" parent="."]

[node name="SpidermanModeDir" type="Label" parent="SpideyMode"]
margin_left = 3280.65
margin_top = 313.878
margin_right = 3442.65
margin_bottom = 396.878
custom_fonts/font = SubResource( 7 )
text = "Spidey Mode
     --->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balloon4" parent="SpideyMode" instance=ExtResource( 15 )]
position = Vector2( 3446.34, 16.0789 )
respawn = true

[node name="Balloon5" parent="SpideyMode" instance=ExtResource( 15 )]
position = Vector2( 4132.96, -22.8566 )
respawn = true

[node name="Balloon6" parent="SpideyMode" instance=ExtResource( 15 )]
position = Vector2( 4827.31, -15.5429 )
respawn = true

[node name="SpidermanModeDir2" type="Label" parent="SpideyMode"]
margin_left = 5479.17
margin_top = -112.004
margin_right = 5641.17
margin_bottom = 13.9962
custom_fonts/font = SubResource( 7 )
text = "Spidey Mode
         |
         v"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building4" parent="SpideyMode" instance=ExtResource( 5 )]
position = Vector2( 5558.01, 439.266 )

[node name="WindTurbine" parent="SpideyMode" instance=ExtResource( 6 )]
position = Vector2( 3448.36, 20.554 )
rotation = -3.14159

[node name="WindTurbine3" parent="SpideyMode" instance=ExtResource( 6 )]
position = Vector2( 4133.34, -21.0684 )
rotation = -3.14159

[node name="WindTurbine2" parent="SpideyMode" instance=ExtResource( 6 )]
position = Vector2( 4824.27, -7.98706 )
rotation = -3.14159

[node name="DoorSpidey" parent="SpideyMode" instance=ExtResource( 2 )]
position = Vector2( 5556.55, 250.527 )
level_mode = 2

[node name="HelpSpidey" type="Label" parent="SpideyMode"]
margin_left = 5535.47
margin_top = 182.204
margin_right = 5747.48
margin_bottom = 308.204
custom_fonts/font = ExtResource( 20 )
text = "Spidey"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpDoorTip3" type="Label" parent="SpideyMode"]
margin_left = 5533.47
margin_top = 202.877
margin_right = 5745.47
margin_bottom = 328.877
custom_fonts/font = ExtResource( 18 )
text = "Jump to enter"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Camera2D/ZeButtons/SettingsButton" to="Camera2D/ZeButtons/SettingsButton" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Camera2D/ZeButtons/QuitButton" to="Camera2D/ZeButtons/QuitButton" method="_on_QuitButton_pressed"]
